# EvenRealityG1-Esp32-Lib

./: .gitignore  CMakeLists.txt  library.json
.github/workflows/: build.yml
.opencode/skills/: eveng1.md
docs/: API.md  SETUP.md
examples/desktop/test_glasses/: main.cpp
examples/esp32/bmp_tester/: platformio.ini
examples/esp32/bmp_tester/src/: bmp_file.cpp  bmp_file.hpp  bmp_pattern.cpp  crc32.cpp  g1_ble.cpp  g1_ble.hpp  g1_commands.hpp  main.cpp
examples/esp32/g1_debug/: platformio.ini
examples/esp32/g1_debug/src/: crc32.hpp  g1_ble.hpp  g1_commands.hpp  main.cpp
examples/minimal_esp32/: platformio.ini
examples/minimal_esp32/src/: bmp_pattern.hpp  g1_ble.cpp  main.cpp
include/eveng1/: eveng1.hpp
include/eveng1/devices/: device.hpp  g1_display.hpp
include/eveng1/graphics/: crc32_xz.hpp  rasterizer.hpp
include/eveng1/protocol/: g1_commands.hpp  g1_protocol.hpp
include/eveng1/transport/: ble_bluez.hpp
src/devices/: g1_device.cpp  g1_display.cpp  simulator_device.cpp
src/graphics/: command_buffer.cpp  crc32_xz.cpp  font_bitmap.cpp  framebuffer.cpp  rasterizer.cpp  render_style.cpp
src/protocol/: display_sender.cpp  g1_protocol.cpp  text_sender.cpp  touch_parser.cpp
src/transport/: null_transport.cpp
src/transport/linux/: ble_bluez.cpp
tests/: test_command_buffer.cpp  test_crc32.cpp  test_dirty_rect.cpp  test_dither.cpp  test_font.cpp  test_framebuffer.cpp  test_protocol.cpp  test_rasterizer.cpp
